- form +contact page + hire me

--- a/cv.html
+++ b/cv.html
@@ -344,6 +344,7 @@
         </details>
         <!-- End of container -->
     </div>
+    <hire-me-component></hire-me-component>
     <nav-menu></nav-menu>
     <script src="navigation.js"></script>
 </body>
