--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div id="custom-cursor"></div>
         </div>
     </div>
+    <hire-me-component></hire-me-component>
     <script src="index.js"></script>
     <script src="navigation.js"></script>
 </body>
