--- a/navigation.html
+++ b/navigation.html
@@ -18,11 +18,12 @@
                 <div class="menu-a-s">
                     <a href="cv.html">CV</a> 
                     <a href="portfolio.html">Portfolio</a> 
-                    <a onclick="openForm(event)" href="#">Contact me</a> 
+                    <a href="hire-me.html">Contact nbme</a> 
+                    <!-- <a onclick="openForm(event)" href="#">Contact me</a>  -->
                 </div>
             </div>
         </div>
-        <div class="contact-form-popup" id="contactForm">
+        <!-- <div class="contact-form-popup" id="contactForm">
             <div class="form-container">
                 <img class="close" onclick="closeForm()" src="assets/x.svg">
                 <form class="form"
@@ -39,15 +40,13 @@
                     <label>
                         <textarea placeholder="Tell me things" name="message" class="input"></textarea>
                     </label>
-                    <!-- your other form fields go here -->
                     <button class="button" type="submit">Send</button>
                 </form>
             </div>
-        </div>
+        </div> -->
     </menu-container>
 
 </template>
 <script src="navigation.js"></script>
-
 </body>
 </html>
