--- a/portfolio.html
+++ b/portfolio.html
@@ -278,10 +278,11 @@
                 <iframe loading="lazy" src="https://www.youtube.com/embed/bOcN1J2Hgeo?autoplay=1&loop=1&playlist=bOcN1J2Hgeo&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>        
         </div>
+        <hire-me-component></hire-me-component>
     </div>
+    <nav-menu></nav-menu>
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
-    <nav-menu></nav-menu>
     <script src="styles.js"></script>
 </body>
 </html>
