--- a/project/coaching.html
+++ b/project/coaching.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-color: #847865;">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/coach 1.png">
     </div>
@@ -45,6 +44,8 @@
         </div>
         <img class="fullwidth w60" src="../assets/coach 3.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
