--- a/project/lift99-dao.html
+++ b/project/lift99-dao.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background: #311742;">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/dao 1.png">
     </div>
@@ -41,6 +40,8 @@
     <section>
         <img class="fullwidth" src="../assets/dao 3.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
