--- a/project/lift99-hr.html
+++ b/project/lift99-hr.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background: #253946;">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/hr 1.png">
     </div>
@@ -70,6 +69,8 @@
         </div>
         <img class="fullwidth" src="../assets/hr 4.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
