--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/am 1.png" >
     </div>
@@ -47,6 +46,8 @@
     <section>
         <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js" defer></script>
 </body> 
