--- a/project/artbay.html
+++ b/project/artbay.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(180deg, rgba(193, 164, 110, 0.70) 36.64%, rgba(213, 189, 142, 0.31) 94.95%);">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/artbay 1.png">
     </div>
@@ -41,6 +40,8 @@
     <section>
         <img class="fullwidth w60 radius20" src="../assets/artbay 6.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
