--- a/project/help99.html
+++ b/project/help99.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(155deg, #043016 5.33%, rgba(31, 48, 29, 0.66) 36.6%, #0F2F04 90.9%);">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/help99 1.png">
     </div>
@@ -54,6 +53,8 @@
         </div>
         <img class="fullwidth" src="../assets/help99 4.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
