--- a/project/sudoculus.html
+++ b/project/sudoculus.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image : linear-gradient(1deg, #1BB5CA 0%, #24163C 100%);">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth w50" src="../assets/sudoculus 1.png">
     </div>
@@ -27,37 +26,19 @@
         </p> 
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
-        </div> -->
         <img class="fullwidth" src="../assets/sudoculus 2.png">
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px; width: 80%; margin-right: 0;" src="../assets/arrow 4.svg" >
-        </div> -->
         <img class="fullwidth w80" src="../assets/sudoculus 3.png">
     </section>
     <section>
         <img class="fullwidth" src="../assets/sudoculus 4.png">
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -300px; top: 30px; transform: scaleY(-1);" src="../assets/arrow 4.svg" >
-        </div> -->
     </section>
     <section>
-        <!-- <div class="arrowdiv">
-            <p>
-            </p>
-            <img style="position: absolute; right: -280px; top: 30px;" src="../assets/arrow 4.svg" >
-        </div> -->
         <img class="fullwidth w70" src="../assets/sudoculus 5.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
