--- a/project/ua911.html
+++ b/project/ua911.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-color: #0A5F7A">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/911 1.png">
     </div>
@@ -36,6 +35,8 @@
     <section>
         <img class="fullwidth" src="../assets/911 4.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
