--- a/project/zbuzz.html
+++ b/project/zbuzz.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="project.css">
 </head>
 <body style="background-image: linear-gradient(155deg, #544B00 5.33%, rgba(20, 20, 19, 0.66) 36.6%, #2D4127 90.9%);">
-    <nav-menu base-path="../"></nav-menu>
     <div class="center">
         <img class="fullwidth" src="../assets/zbuzz 1.png">
     </div>
@@ -80,6 +79,8 @@
         </div>
         <img class="fullwidth" src="../assets/zbuzz 7.png">
     </section>
+    <nav-menu base-path="../"></nav-menu>
+    <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
