--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,12 @@
 <body>
     <div id="cursor1"></div>
     <div id="cursor2"></div>
+    <div class="grainy-div">
+        <div class="grainy">
+        </div>
+        <div class="grain">
+        </div>
+    </div>
     <div class="bigger-container">
         <div class="container">
             <h1>Websites</h1>
