minor style updates to hire me page

--- a/hire-me.html
+++ b/hire-me.html
@@ -20,11 +20,13 @@
     <link rel="stylesheet" href="hire-me.css">
 </head>
 <body>
+    <div id="cursor1"></div>
+    <div id="cursor2"></div>
     <div class="container">
-        <div class="header-div">
-            <p>I'm available for projects</p>
-            <p>Lets build</p>
-            <p>Awesomeness together</p>
+        <div class="header-div-info">
+            <p class="title">I'm available for projects</p>
+            <p class="title">Lets build</p>
+            <p class="title">Awesomeness together</p>
             <img class="hire-me" src="assets/hire me.png">
         </div>
         <div class="buttondiv">
@@ -53,8 +55,16 @@
             <!-- Calendly inline widget end -->
         </div>
     </div>
+    <div class="grainy-div">
+        <div class="grainy">
+        </div>
+        <div class="grain">
+        </div>
+    </div>
     <nav-menu></nav-menu>
     <script src="hire-me.js"></script>
     <script src="navigation.js"></script>
+    <script src="styles.js"></script>
+
 </body>
 </html>
