adding logo page

--- a/navigation.html
+++ b/navigation.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="navigation.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <template id="nav-menu">
@@ -18,34 +20,26 @@
                     <a href="cv.html">CV</a> 
                     <a href="portfolio.html">Portfolio</a> 
                     <a href="hire-me.html">Contact nbme</a> 
-                    <!-- <a onclick="openForm(event)" href="#">Contact me</a>  -->
                 </div>
             </div>
         </div>
-        <!-- <div class="contact-form-popup" id="contactForm">
-            <div class="form-container">
-                <img class="close" onclick="closeForm()" src="assets/x.svg">
-                <form class="form"
-                    action="https://formspree.io/f/xleyzdvq"
-                    method="POST"
-                    >
-                    <h2>Lets build awesomeness</h2>
-                    <label>
-                        <input placeholder="Your Email" type="email" name="email" class="input">
-                    </label>
-                    <label>
-                        <textarea placeholder="Subject" name="Subject" class="input"></textarea>
-                    </label>
-                    <label>
-                        <textarea placeholder="Tell me things" name="message" class="input"></textarea>
-                    </label>
-                    <button class="button" type="submit">Send</button>
-                </form>
-            </div>
-        </div> -->
     </menu-container>
-
 </template>
+
+
+<template id="footer">
+    <link rel="stylesheet" href="navigation.css">
+
+    <footer>
+        <div class="footer">
+            <h2>Zeina's Designs</h2>
+            <a class="footer-a" href="/hire-me.html">Contact me</a>
+        </div>
+    </footer>
+</template>
+
+
+
 <script src="navigation.js"></script>
 </body>
 </html>
