--- a/portfolio.html
+++ b/portfolio.html
@@ -152,6 +152,11 @@
                         <a class="morebutton" href="project/zbuzz.html">Check it out -></a>
                     </swiper-slide>
                     <swiper-slide>
+                        <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
+                            <img class="logo-img" loading="lazy" src="assets/m4u logo.png">
+                        </div>
+                    </swiper-slide>
+                    <swiper-slide>
                         <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);" >
                             <img class="logo-img"  loading="lazy"  src="assets/middle litoral logo.png">
                         </div>
@@ -291,6 +296,7 @@
         <hire-me-component></hire-me-component>
     </div>
     <nav-menu></nav-menu>
+    <footer></footer>
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="styles.js"></script>
