--- a/hire-me.html
+++ b/hire-me.html
@@ -54,6 +54,8 @@
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
             <!-- Calendly inline widget end -->
         </div>
+        <p class="title">What others say about me</p>
+        <div class='sk-ww-linkedin-recommendations' data-embed-id='251591'></div><script src='https://widgets.sociablekit.com/linkedin-recommendations/widget.js' async defer></script>
     </div>
     <div class="grainy-div">
         <div class="grainy">
@@ -65,6 +67,5 @@
     <script src="hire-me.js"></script>
     <script src="navigation.js"></script>
     <script src="styles.js"></script>
-
 </body>
 </html>
