--- a/logo.html
+++ b/logo.html
@@ -33,88 +33,91 @@
             <a href="/hire-me.html">
                 <p>Need a logo design? Lets mak it happen</p>
             </a>
-            <div class="logo-main-div">
-                <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
-                    <img class="logo-img" rel="preload" loading="eager" src="assets/active mode logo.png">
-                    <!-- <a class="morebutton" href="project/active-mode.html">Check it out -></a> -->
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="eager" src="assets/totally jasmin logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/emuse logo.png">
-                </div>
-                <div class="logo-div" style="background-color: #1C1D1D;">
-                    <img class="logo-img" loading="lazy" src="assets/zbuzz logo.png">
-                    <!-- <a class="morebutton" href="project/zbuzz.html">Check it out -></a> -->
-                </div>
-                <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                    <img class="logo-img" loading="lazy" src="assets/m4u logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/middle litoral logo.png">
-                </div>
-                <div class="logo-div" style="background-color: #1D315C;">
-                    <img class="logo-img" loading="lazy" src="assets/aaz trading co logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/charm of  the elements logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/katia g saade logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/galivanter log logo.png" style="max-width: 500px;">
-                </div>
-                <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
-                    <img class="logo-img" loading="lazy" src="assets/depo logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/paragliding logo.png">
-                </div>
-                <div class="logo-div" style="background: #F8F5F1;">
-                    <img class="logo-img" loading="lazy" src="assets/aaz leonardite logo.png">
-                    <!-- <a class="morebutton" href="project/Leonardite.html">Check it out -></a> -->
-                </div>
-                <div class="logo-div" style="background: #FFFCF3;">
-                    <img class="logo-img" loading="lazy" src="assets/jaz logo.png">
-                </div>
-                <div class="logo-div" style="background: #FFF;">
-                    <img class="logo-img" loading="lazy" src="assets/sudoculus logo.png">
-                    <!-- <a class="morebutton" href="project/sudoculus.html">Check it out -></a> -->
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/amal logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Angelic\ Assosiation\ of\ Anis\ Saade\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/aaas logo.png">
-                </div>
-                <div class="logo-div" style="background: #D7EBF2;">
-                    <img class="logo-img" loading="lazy" src="assets/keenel logo.png">
-                </div>
-                <div class="logo-div" style="background: #FFFCF3;">
-                    <img class="logo-img" loading="lazy" src="assets/zbowls logo.png">
-                </div>
-                <div class="logo-div" style="background-color: #FFDE17;">
-                    <img class="logo-img" loading="lazy" src="assets/walid logo.png">
-                </div>
-                <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg);">
-                    <img class="logo-img" loading="lazy" src="assets/golden dynasty logo.png">
-                </div>
-                <div class="logo-div" style="background-color: #FDED1C;">
-                    <img class="logo-img" loading="lazy" src="assets/skylux avia logo.png">
+            <div class="center-all">
+                <div class="logo-main-div">
+                    <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
+                        <img class="logo-img" rel="preload" loading="eager" src="assets/active mode logo.png">
+                        <!-- <a class="morebutton" href="project/active-mode.html">Check it out -></a> -->
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Tottaly\ jasmine\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="eager" src="assets/totally jasmin logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Emuse\ logo\ bg.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/emuse logo.png">
+                    </div>
+                    <div class="logo-div" style="background-color: #1C1D1D;">
+                        <img class="logo-img" loading="lazy" src="assets/zbuzz logo.png">
+                        <!-- <a class="morebutton" href="project/zbuzz.html">Check it out -></a> -->
+                    </div>
+                    <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
+                        <img class="logo-img" loading="lazy" src="assets/m4u logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Middle\ litoral\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/middle litoral logo.png">
+                    </div>
+                    <div class="logo-div" style="background-color: #1D315C;">
+                        <img class="logo-img" loading="lazy" src="assets/aaz trading co logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Charm\ of\ the\ elements\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/charm of  the elements logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Katia\ G\ Saade\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/katia g saade logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Gallivanters\ log\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/galivanter log logo.png" style="max-width: 500px;">
+                    </div>
+                    <div class="logo-div" style="background: linear-gradient(160deg, #363642 25.84%, #0B0B0C 76.08%);">
+                        <img class="logo-img" loading="lazy" src="assets/depo logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Kafroun\ paragliding\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/paragliding logo.png">
+                    </div>
+                    <div class="logo-div" style="background: #F8F5F1;">
+                        <img class="logo-img" loading="lazy" src="assets/aaz leonardite logo.png">
+                        <!-- <a class="morebutton" href="project/Leonardite.html">Check it out -></a> -->
+                    </div>
+                    <div class="logo-div" style="background: #FFFCF3;">
+                        <img class="logo-img" loading="lazy" src="assets/jaz logo.png">
+                    </div>
+                    <div class="logo-div" style="background: #FFF;">
+                        <img class="logo-img" loading="lazy" src="assets/sudoculus logo.png">
+                        <!-- <a class="morebutton" href="project/sudoculus.html">Check it out -></a> -->
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/amal logo.png">
+                    </div>
+                    <div class="logo-div" st
+                    yle="background-image: url(assets/Angelic\ Assosiation\ of\ Anis\ Saade\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/aaas logo.png">
+                    </div>
+                    <div class="logo-div" style="background: #D7EBF2;">
+                        <img class="logo-img" loading="lazy" src="assets/keenel logo.png">
+                    </div>
+                    <div class="logo-div" style="background: #FFFCF3;">
+                        <img class="logo-img" loading="lazy" src="assets/zbowls logo.png">
+                    </div>
+                    <div class="logo-div" style="background-color: #FFDE17;">
+                        <img class="logo-img" loading="lazy" src="assets/walid logo.png">
+                    </div>
+                    <div class="logo-div" style="background-image: url(assets/Golden\ dynasty\ logo\ bg-min.jpg);">
+                        <img class="logo-img" loading="lazy" src="assets/golden dynasty logo.png">
+                    </div>
+                    <div class="logo-div" style="background-color: #FDED1C;">
+                        <img class="logo-img" loading="lazy" src="assets/skylux avia logo.png">
+                    </div>
                 </div>
             </div>
         </div>
-    <a class="cta" href="/hire-me.html">
-        <p>Need a website? Get in touch & Lets make it happen</p>
-    </a>
-    <hire-me-component></hire-me-component>
-</div>
-<nav-menu></nav-menu>
-<footer></footer>
-<script src="navigation.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
-<script src="styles.js"></script>
+        <a class="cta" href="/hire-me.html">
+            <p>Need a logo? Get in touch & Lets make it happen</p>
+        </a>
+        <hire-me-component></hire-me-component>
+    </div>
+    <nav-menu></nav-menu>
+    <footer></footer>
+    <script src="navigation.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <script src="styles.js"></script>
 </body>
 </html>
