--- a/navigation.html
+++ b/navigation.html
@@ -25,21 +25,25 @@
         </div>
     </menu-container>
 </template>
-
-
 <template id="footer">
-    <link rel="stylesheet" href="navigation.css">
-
-    <footer>
-        <div class="footer">
-            <h2>Zeina's Designs</h2>
-            <a class="footer-a" href="/hire-me.html">Contact me</a>
-        </div>
-    </footer>
 </template>
+<link rel="stylesheet" href="navigation.css">
 
-
-
+<footer>
+    <div class="footer">
+        <h2>Zeina's Designs</h2>
+        <div class="footer-structure">
+            <div class="footer-div">
+                <a class="footer-a" href="/hire-me.html">Contact me</a>
+                <a class="footer-a" href="/cv.html">CV</a>
+            </div>
+            <div class="footer-div">
+                <a class="footer-a" href="/portfolio.html">Full portfolio</a>
+                <a class="footer-a" href="/logo.html">Logo designs</a>
+            </div>
+        </div>
+    </div>
+</footer>
 <script src="navigation.js"></script>
 </body>
 </html>
