--- a/cv.html
+++ b/cv.html
@@ -355,6 +355,7 @@
     </div>
     <hire-me-component></hire-me-component>
     <nav-menu></nav-menu>
+    <main-footer></main-footer>
     <script src="navigation.js"></script>
 </body>
 </html>
