--- a/hire-me.html
+++ b/hire-me.html
@@ -64,6 +64,7 @@
         </div>
     </div>
     <nav-menu></nav-menu>
+    <main-footer></main-footer>
     <script src="hire-me.js"></script>
     <script src="navigation.js"></script>
     <script src="styles.js"></script>
