--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
     </div>
     <hire-me-component></hire-me-component>
+    <main-footer></main-footer>
     <script src="index.js"></script>
     <script src="navigation.js"></script>
 </body>
