--- a/navigation.html
+++ b/navigation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,18 +32,20 @@
 <footer>
     <div class="footer">
         <h2>Zeina's Designs</h2>
+        <p> I'm currently open for new projects relating to Graphic Design & Web projects.<br>So get in touch</p>
         <div class="footer-structure">
             <div class="footer-div">
                 <a class="footer-a" href="/hire-me.html">Contact me</a>
                 <a class="footer-a" href="/cv.html">CV</a>
             </div>
             <div class="footer-div">
-                <a class="footer-a" href="/portfolio.html">Full portfolio</a>
+                <a class="footer-a" href="/portfolio.html" style="margin-bottom: 10px;">Full portfolio</a>
                 <a class="footer-a" href="/logo.html">Logo designs</a>
+                <a class="footer-a" href="/logo.html">Web projects</a>
             </div>
         </div>
     </div>
 </footer>
 <script src="navigation.js"></script>
 </body>
-</html>
+</html> -->
