--- a/portfolio copy.html
+++ b/portfolio copy.html
@@ -292,6 +292,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <nav-menu></nav-menu>
+    <main-footer></main-footer>
     <script src="navigation.js"></script>
     <script src="styles.js"></script>
 </body>
