--- a/project/pilar-elias-art.html
+++ b/project/pilar-elias-art.html
@@ -46,6 +46,7 @@
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
+    <main-footer base-path="../"></main-footer>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
