--- a/logo.html
+++ b/logo.html
@@ -115,7 +115,7 @@
         <hire-me-component></hire-me-component>
     </div>
     <nav-menu></nav-menu>
-    <footer></footer>
+    <main-footer></main-footer>
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="styles.js"></script>
