--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -56,6 +56,7 @@
         <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
     <nav-menu base-path="../"></nav-menu>
+    <main-footer base-path="../"></main-footer>
     <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js" defer></script>
