--- a/website.html
+++ b/website.html
@@ -84,9 +84,9 @@
         </div>
     </div>
     <nav-menu></nav-menu>
-    <footer></footer>
+    <main-footer></main-footer>
     <script src="navigation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="styles.js"></script>
 </body>
-</html>
+</html>s
