--- a/navigation.html
+++ b/navigation.html
@@ -41,7 +41,7 @@
             <div class="footer-div">
                 <a class="footer-a" href="/portfolio.html" style="margin-bottom: 10px;">Full portfolio</a>
                 <a class="footer-a" href="/logo.html">Logo designs</a>
-                <a class="footer-a" href="/logo.html">Web projects</a>
+                <a class="footer-a" href="/website.html">Web projects</a>
             </div>
         </div>
     </div>
