--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,11 @@
                         <img class="project-img phone" loading="lazy" src="assets/DAO phone.png" style="background: #311742d6;">
                         <a class="morebutton" href="project/lift99-dao.html">Check it out -></a>
                     </swiper-slide>
+                    <swiper-slide>
+                        <img class="project-img web" loading="lazy" src="assets/M4U web projectr cover.jpg" style="background: white;">
+                        <img class="project-img phone" loading="lazy" src="assets/M4U phone cover.png" style="background: white;">
+                        <a class="morebutton" href="project/mission-for-ukraine.html">Check it out -></a>
+                    </swiper-slide>
                 </swiper-container>
             </section>
             <p>Webflow Development projects</p>
