--- a/project/active-mode.html
+++ b/project/active-mode.html
@@ -56,7 +56,9 @@
         <img class="fullwidth w70" src="../assets/am 8.png">
     </section>
     <nav-menu base-path="../"></nav-menu>
-    <main-footer base-path="../"></main-footer>
+    <section>
+        <main-footer base-path="../"></main-footer>
+    </section>
     <hire-me-component base-path="../"></hire-me-component>
     <script src="project.js"></script>
     <script src="../navigation.js" defer></script>
