--- a/project/mission-for-ukraine.html
+++ b/project/mission-for-ukraine.html
@@ -27,7 +27,7 @@
         <div class="h1div">
             <h1>M4U</h1>
         </div>
-        <a class="link" target="_blank" href="https://zbuzz.webflow.io/">Check out live web</a>
+        <a class="link" target="_blank" href="https://www.missionforukraine.org/">Check out live web</a>
     </section>
     <section>
         <p class="highlighted smaller">
@@ -55,7 +55,9 @@
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
-    <main-footer base-path="../"></main-footer>
+    <section>
+        <main-footer base-path="../"></main-footer>
+    </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
