--- a/project/pilar-elias-art.html
+++ b/project/pilar-elias-art.html
@@ -46,7 +46,9 @@
     </section>
     <nav-menu base-path="../"></nav-menu>
     <hire-me-component base-path="../"></hire-me-component>
-    <main-footer base-path="../"></main-footer>
+    <section>
+        <main-footer base-path="../"></main-footer>
+    </section>
     <script src="project.js"></script>
     <script src="../navigation.js"></script>
 </body> 
