--- a/logo.html
+++ b/logo.html
@@ -93,7 +93,7 @@
                     <div class="logo-div" style="background-image: url(assets/Amal\ logo\ bg.jpg);">
                         <img class="logo-img" loading="lazy" src="assets/amal logo.png">
                     </div>
-                    <div class="logo-div" style="background-image: url(assets/angelic\ assosiation\ of\ anis\ saade\ logo\ bg-min.jpg);">
+                    <div class="logo-div" style="background-image: url(assets/angelic\ assosiation\ of\ anis\ saade\ logo\ bg-min.jpg); background-color: #D7EBF2;">
                         <img class="logo-img" loading="lazy" src="assets/aaas logo.png">
                     </div>
                     <div class="logo-div" style="background: #FFFCF3;">
