--- a/logo.html
+++ b/logo.html
@@ -30,14 +30,17 @@
     <div class="bigger-container">
         <div class="container">
             <h1>Logo designs</h1>
-            <a href="/hire-me.html">
-                <p>Need a logo design? Lets mak it happen</p>
-            </a>
             <div class="center-all">
                 <div class="logo-main-div">
                     <div class="logo-div" style="background-image: url(assets/Active\ mode\ logo\ bg-min.jpg);">
                         <img class="logo-img" rel="preload" loading="eager" src="assets/active mode logo.png">
                         <!-- <a class="morebutton" href="project/active-mode.html">Check it out -></a> -->
+                    </div>
+                    <div>
+                        <p>I'm Zeina, A Graphic Designer & Web Designer / Builder.</p>
+                        <a href="/hire-me.html">
+                            <p>Need a logo design? Lets mak it happen</p>
+                        </a>
                     </div>
                     <div class="logo-div" style="background-color: #1C1D1D;">
                         <img class="logo-img" loading="lazy" src="assets/zbuzz logo.png">
