--- a/logo.html
+++ b/logo.html
@@ -37,7 +37,7 @@
                         <!-- <a class="morebutton" href="project/active-mode.html">Check it out -></a> -->
                     </div>
                     <div>
-                        <p>I'm Zeina, A Graphic Designer & Web Designer / Builder.</p>
+                        <p>I'm Zeina, A Graphic Designer, Web Designer & Builder.</p>
                         <a href="/hire-me.html">
                             <p>Need a logo design? Lets mak it happen</p>
                         </a>
